--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.25)
-project(COSC-4P80-Assignment-2 VERSION 0.0.2)
+project(COSC-4P80-Assignment-2 VERSION 0.0.3)
 
 option(ENABLE_ADDRSAN "Enable the address sanitizer" OFF)
 option(ENABLE_UBSAN "Enable the ub sanitizer" OFF)
 option(ENABLE_TSAN "Enable the thread data race sanitizer" OFF)
-option(EIGEN_TEST_CXX11 "Enable testing with C++11 and C++11 features (e.g. Tensor module)." ON)
+#option(EIGEN_TEST_CXX11 "Enable testing with C++11 and C++11 features (e.g. Tensor module)." ON)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -14,7 +14,7 @@ endif()
 
 add_subdirectory(lib/blt)
 
-add_subdirectory(lib/eigen-3.4.0)
+#add_subdirectory(lib/eigen-3.4.0)
 
 include_directories(include/)
 file(GLOB_RECURSE PROJECT_BUILD_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
@@ -24,7 +24,8 @@ add_executable(COSC-4P80-Assignment-2 ${PROJECT_BUILD_FILES})
 target_compile_options(COSC-4P80-Assignment-2 PRIVATE -Wall -Wextra -Wpedantic -Wno-comment)
 target_link_options(COSC-4P80-Assignment-2 PRIVATE -Wall -Wextra -Wpedantic -Wno-comment)
 
-target_link_libraries(COSC-4P80-Assignment-2 PRIVATE BLT Eigen3::Eigen)
+#target_link_libraries(COSC-4P80-Assignment-2 PRIVATE BLT Eigen3::Eigen)
+target_link_libraries(COSC-4P80-Assignment-2 PRIVATE BLT)
 
 if (${ENABLE_ADDRSAN} MATCHES ON)
     target_compile_options(COSC-4P80-Assignment-2 PRIVATE -fsanitize=address)
